# pydantic-ai

mcp-run-python/: build.ts
mcp-run-python/src/: main.ts  runCode.ts  tool_injection.py
pydantic_ai_slim/: pyproject.toml
pydantic_ai_slim/pydantic_ai/: agent.py  mcp.py
tests/: test_mcp_elicitation.py
